[package]
name = "conui"
version = "0.1.0"
authors = ["Alex Bowen <ajbowen249@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.24"

[dependencies.pancurses]
version = "0.16"
features = ["win32"]
