[package]
name = "conui"
version = "0.1.0"
authors = ["Alex Bowen <ajbowen249@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pancurses = { version = " 0.16", features = ["win32"] }

[[example]]
name = "basic_example"
path = "src/examples/basic_example.rs"
